# ironic-inspector-specs

./: .gitreview  README.rst  requirements.txt  setup.cfg  template.rst  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst
specs/: HA_inspector.rst  NUMA_node_info.rst  Network-Interface-Resource-Info.rst  configurable-introspection-data-backends.rst  dmidecode-reporting.rst  etcd-coordination.rst  generic-pci-resource.rst  ironic-node-auto-discovery.rst  list-introspection-statuses.rst  lldp-reporting.rst  multiple-pxe-filtering-backends.rst  splitting-service-on-API-and-worker.rst  tooz-coordination.rst
